Updating bts-workflow.

--- a/bis-workflow.ipynb
+++ b/bis-workflow.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 1,
    "id": "9ee6a4f6",
    "metadata": {},
    "outputs": [],
@@ -268,320 +268,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "id": "ef63166e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "git = 'https://github.com/'\n",
-    "newlist = []\n",
-    "for repo in repository_links:\n",
-    "    newlist.append(repo[1:])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
-   "id": "f7f4d61f",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['apple/llvm-project',\n",
-       " 'apple/swift-argument-parser',\n",
-       " 'apple/swift-docc',\n",
-       " 'apple/swift',\n",
-       " 'apple/sourcekit-lsp',\n",
-       " 'apple/foundationdb',\n",
-       " 'apple/swift-protobuf',\n",
-       " 'apple/swift-llbuild',\n",
-       " 'apple/swift-syntax',\n",
-       " 'apple/swift-package-manager',\n",
-       " 'apple/swift-source-compat-suite',\n",
-       " 'apple/swift-markdown',\n",
-       " 'apple/swift-docc-symbolkit',\n",
-       " 'apple/swift-docc-render-artifact',\n",
-       " 'apple/swift-lmdb',\n",
-       " 'apple/swift-tools-support-core',\n",
-       " 'apple/swift-driver',\n",
-       " 'apple/indexstore-db',\n",
-       " 'apple/swift-stress-tester',\n",
-       " 'apple/swift-xcode-playground-support',\n",
-       " 'apple/swift-integration-tests',\n",
-       " 'apple/swift-cmark',\n",
-       " 'apple/swift-corelibs-libdispatch',\n",
-       " 'apple/swift-corelibs-foundation',\n",
-       " 'apple/swift-corelibs-xctest',\n",
-       " 'apple/swift-experimental-string-processing',\n",
-       " 'apple/swift-docker',\n",
-       " 'apple/swift-installer-scripts',\n",
-       " 'apple/swift-llbuild2',\n",
-       " 'apple/swift-docc-render',\n",
-       " 'apple/swift-evolution',\n",
-       " 'apple/servicetalk',\n",
-       " 'apple/swift-nio-ssh',\n",
-       " 'apple/password-manager-resources',\n",
-       " 'apple/swift-nio',\n",
-       " 'apple/ml-hypersim',\n",
-       " 'apple/swift-collections',\n",
-       " 'apple/coremltools',\n",
-       " 'apple/swift-atomics',\n",
-       " 'apple/swift-log',\n",
-       " 'apple/swift-distributed-actors',\n",
-       " 'apple/swift-algorithms',\n",
-       " 'apple/apple-llvm-infrastructure-tools',\n",
-       " 'apple/swift-collections-benchmark',\n",
-       " 'apple/cloudkit-sample-sharing',\n",
-       " 'apple/cloudkit-sample-queries',\n",
-       " 'apple/cloudkit-sample-privatedb-sync',\n",
-       " 'apple/cloudkit-sample-privatedb',\n",
-       " 'apple/cloudkit-sample-encryption',\n",
-       " 'apple/cloudkit-sample-coredatasync',\n",
-       " 'apple/example-package-playingcard',\n",
-       " 'apple/swift-distributed-tracing',\n",
-       " 'apple/swift-distributed-tracing-baggage',\n",
-       " 'apple/swift-nio-ssl',\n",
-       " 'apple/swift-tools-support-async',\n",
-       " 'apple/swift-package-collection-generator',\n",
-       " 'apple/swift-crypto',\n",
-       " 'apple/swift-docc-plugin',\n",
-       " 'apple/ARKitScenes',\n",
-       " 'apple/swift-metrics',\n",
-       " 'apple/swift-metrics-extras',\n",
-       " 'apple/swift-nio-http2',\n",
-       " 'apple/swift-http-structured-headers',\n",
-       " 'apple/swift-nio-extras',\n",
-       " 'apple/swift-nio-transport-services',\n",
-       " 'apple/darwin-xnu',\n",
-       " 'apple/swift-system',\n",
-       " 'apple/swift-format',\n",
-       " 'apple/ml-cvnets',\n",
-       " 'apple/ml-knowledge-conflicts',\n",
-       " 'apple/swift-sample-distributed-actors-transport',\n",
-       " 'apple/swift-numerics',\n",
-       " 'apple/cups',\n",
-       " 'apple/swift-package-registry-compatibility-test-suite',\n",
-       " 'apple/swift-se0288-is-power',\n",
-       " 'apple/swift-standard-library-preview',\n",
-       " 'apple/swift-se0270-range-set',\n",
-       " 'apple/ml-core',\n",
-       " 'apple/FHIRModels',\n",
-       " 'apple/turicreate',\n",
-       " 'apple/swift-service-discovery',\n",
-       " 'apple/HomeKitADK',\n",
-       " 'apple/GCGC',\n",
-       " 'apple/swift-community-hosted-continuous-integration',\n",
-       " 'apple/tensorflow_macos',\n",
-       " 'apple/swift-nio-examples',\n",
-       " 'apple/learning-compressible-subspaces',\n",
-       " 'apple/ccs-pykerberos',\n",
-       " 'apple/swift-internals',\n",
-       " 'apple/example-package-fisheryates',\n",
-       " 'apple/ml-shuffling-amplification',\n",
-       " 'apple/ml-gsn',\n",
-       " 'apple/ccs-caldavtester',\n",
-       " 'apple/swift-evolution-staging',\n",
-       " 'apple/example-package-dealer',\n",
-       " 'apple/ml-cvpr2019-swd',\n",
-       " 'apple/example-package-deckofplayingcards',\n",
-       " 'apple/ml-covid-mobility',\n",
-       " 'apple/swift-statsd-client',\n",
-       " 'apple/AudioUnitSDK',\n",
-       " 'apple/swift-nio-zlib-support',\n",
-       " 'apple/openjdk',\n",
-       " 'apple/ml-uwac',\n",
-       " 'apple/darwin-libpthread',\n",
-       " 'apple/ml-probabilistic-attention',\n",
-       " 'apple/ml-envmapnet',\n",
-       " 'apple/ml-cread',\n",
-       " 'apple/swift-distributed-tracing-baggage-core',\n",
-       " 'apple/ml-stuttering-events-dataset',\n",
-       " 'apple/ml-multiple-futures-prediction',\n",
-       " 'apple/ml-qrecc',\n",
-       " 'apple/apple_rules_lint',\n",
-       " 'apple/vqg-multimodal-assistant',\n",
-       " 'apple/ccs-pycalendar',\n",
-       " 'apple/learning-subspaces',\n",
-       " 'apple/darwin-libplatform',\n",
-       " 'apple/ml-quant',\n",
-       " 'apple/ml-equivariant-neural-rendering',\n",
-       " 'apple/swift-nio-nghttp2-support',\n",
-       " 'apple/swift-nio-ssl-support',\n",
-       " 'apple/swift-cluster-membership',\n",
-       " 'apple/ml-tree-dst',\n",
-       " 'apple/ml-collegial-ensembles',\n",
-       " 'apple/swiftpm-on-llbuild2',\n",
-       " 'apple/ml-transcript-translation-consistency-ratings',\n",
-       " 'apple/ml-mkqa',\n",
-       " 'apple/ml-dab',\n",
-       " 'apple/ml-capsules-inverted-attention-routing',\n",
-       " 'apple/ccs-calendarserver',\n",
-       " 'apple/swift-lldb',\n",
-       " 'apple/ml-cifar-10-faster',\n",
-       " 'apple/ml-data-parameters',\n",
-       " 'apple/ml-afv',\n",
-       " 'apple/swift-llvm',\n",
-       " 'apple/swift-clang',\n",
-       " 'apple/swift-clang-tools-extra',\n",
-       " 'apple/swift-libcxx',\n",
-       " 'apple/swift-compiler-rt',\n",
-       " 'apple/llvm-project-v5-split',\n",
-       " 'apple/llvm-project-v5',\n",
-       " 'apple/llvm-monorepo-root',\n",
-       " 'apple/ml-ncg',\n",
-       " 'apple/ccs-twistedextensions',\n",
-       " 'apple/ml-all-pairs',\n",
-       " 'apple/swift-3-api-guidelines-review',\n",
-       " 'apple/ccs-pyopendirectory',\n",
-       " 'apple/swift-protobuf-plugin',\n",
-       " 'apple/ccs-caldavclientlibrary',\n",
-       " 'apple/ccs-pyosxframeworks',\n",
-       " 'apple/ccs-pysecuretransport']"
-      ]
-     },
-     "execution_count": 59,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "newlist"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ef26fabc",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "id": "0211c9fb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "headers = {\"Authorization\": f\"token {github_token}\", \"User-Agent\": github_username}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "id": "b583f89d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def github_api_request(url: str) -> Union[List, Dict]:\n",
-    "    response = requests.get(url, headers=headers)\n",
-    "    response_data = response.json()\n",
-    "    if response.status_code != 200:\n",
-    "        raise Exception(\n",
-    "            f\"Error response from github api! status code: {response.status_code}, \"\n",
-    "            f\"response: {json.dumps(response_data)}\"\n",
-    "        )\n",
-    "    return response_data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "id": "e115f62b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "response = requests.get('https://github.com/apple/llvm-monorepo-root', headers=headers)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "id": "1866bc9d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Response [200]>"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "response"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "id": "08ee5637",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (1800319426.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"/var/folders/jl/s3ptdwdx55v01d2g2wrs7vdc0000gn/T/ipykernel_11255/1800319426.py\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    ('https://github.com/apple/llvm-monorepo-root') -> Union[List, Dict]\u001b[0m\n\u001b[0m                                                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
-   "source": [
-    "('https://github.com/apple/llvm-monorepo-root') -> Union[List, Dict]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "66856d4b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "84c7aff3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df = pd.read_json('data.json')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "beee98ac",
+   "execution_count": 11,
+   "id": "f3e48a7c",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6aef461d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "04805549",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4bcfd8da",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Swift               65\n",
+       "Python              38\n",
+       "C++                 15\n",
+       "C                   12\n",
+       "JavaScript           3\n",
+       "Shell                2\n",
+       "HTML                 2\n",
+       "Jupyter Notebook     2\n",
+       "Java                 2\n",
+       "LLVM                 1\n",
+       "Starlark             1\n",
+       "Dockerfile           1\n",
+       "Markdown             1\n",
+       "R                    1\n",
+       "Name: language, dtype: int64"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.language.value_counts()"
+   ]
   },
   {
    "cell_type": "code",
