prepare file with some observations

--- a/prepare_wip_dr.ipynb
+++ b/prepare_wip_dr.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c750ae7d",
+   "id": "f1c464f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "9e091d32",
+   "id": "cf5ce528",
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "474abd80",
+   "id": "fb2536b2",
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "9bb490c9",
+   "id": "629ba7a0",
    "metadata": {
     "scrolled": true
    },
@@ -216,17 +216,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bbe711df",
+   "id": "1947a5e4",
    "metadata": {},
    "source": [
     "#### Observations:\n",
     "\n",
     "- There are some repositories lacking a specified language, not sure how to proceed there but there's only 8 rows missing languages\n",
     "    - an idea is to infer the language based on the repository title\n",
-    "- llvm project does not specify language\n",
-    "- swift docc render does not specify language but an idea would be to infer it's a majority swift repo?\n",
+    "- llvm project does not specify language but readme states the repo contains source code for LLVM, so go with LLVM?\n",
+    "- swift docc render artifact does not specify language but the readme states that the repository holds a pre-built copy of the swift docc render repo, which is majority javascript\n",
     "- swift imdb is C, not sure why the acquire function didn't pick it up\n",
-    "- swift community hosted... does not specify language but an idea would be to infer it's a majority swift repo?\n",
+    "- swift community hosted continuous integration is an extension of Swift ci which allows community memberts to add platforms.\n",
+    "    - Seems like the most recent uploads to the swift ci site are swift based files.\n",
     "- ml transcript translation's repo looks like is just csv files\n",
     "- llvm monorepo root is a wip repository for apple's open source Swift project.\n",
     "- swift protobuf plugin was combined under the swift-protobuf repo, which is majority swift programming language\n",
@@ -236,7 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "9f538ff5",
+   "id": "5eddcef7",
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "65e17646",
+   "id": "f3e304e7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "3365d65c",
+   "id": "70a644bf",
    "metadata": {},
    "outputs": [
     {
@@ -680,7 +681,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9846d30",
+   "id": "857d76f2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -688,7 +689,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2c47637",
+   "id": "f5e43a56",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -696,7 +697,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12cb6747",
+   "id": "fc8970e8",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -704,7 +705,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41a920d0",
+   "id": "2663c697",
    "metadata": {},
    "outputs": [],
    "source": []
