--- a/jag_explore.ipynb
+++ b/jag_explore.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -120,21 +120,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "['/apple/llvm-project',\n",
-       " '/apple/swift',\n",
-       " '/apple/sourcekit-lsp',\n",
        " '/apple/foundationdb',\n",
-       " '/apple/swift-docc',\n",
-       " '/apple/swift-protobuf',\n",
-       " '/apple/swift-llbuild',\n",
-       " '/apple/swift-syntax',\n",
+       " '/apple/swift',\n",
+       " '/apple/swift-docc-render',\n",
+       " '/apple/swift-corelibs-libdispatch',\n",
        " '/apple/swift-package-manager',\n",
+       " '/apple/swift-experimental-string-processing',\n",
+       " '/apple/swift-protobuf',\n",
+       " '/apple/swift-syntax',\n",
+       " '/apple/sourcekit-lsp',\n",
+       " '/apple/swift-argument-parser',\n",
+       " '/apple/swift-docc',\n",
+       " '/apple/swift-llbuild',\n",
        " '/apple/swift-source-compat-suite',\n",
        " '/apple/swift-markdown',\n",
        " '/apple/swift-docc-symbolkit',\n",
@@ -147,14 +151,11 @@
        " '/apple/swift-xcode-playground-support',\n",
        " '/apple/swift-integration-tests',\n",
        " '/apple/swift-cmark',\n",
-       " '/apple/swift-corelibs-libdispatch',\n",
        " '/apple/swift-corelibs-foundation',\n",
        " '/apple/swift-corelibs-xctest',\n",
-       " '/apple/swift-experimental-string-processing',\n",
        " '/apple/swift-docker',\n",
        " '/apple/swift-installer-scripts',\n",
        " '/apple/swift-llbuild2',\n",
-       " '/apple/swift-docc-render',\n",
        " '/apple/swift-evolution',\n",
        " '/apple/servicetalk',\n",
        " '/apple/swift-nio-ssh',\n",
@@ -167,7 +168,6 @@
        " '/apple/swift-log',\n",
        " '/apple/swift-distributed-actors',\n",
        " '/apple/swift-algorithms',\n",
-       " '/apple/swift-argument-parser',\n",
        " '/apple/apple-llvm-infrastructure-tools',\n",
        " '/apple/swift-collections-benchmark',\n",
        " '/apple/cloudkit-sample-sharing',\n",
@@ -278,7 +278,7 @@
        " '/apple/ccs-pysecuretransport']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +438,7 @@
        "[151 rows x 3 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +472,7 @@
        "Name: language, dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,6 +505,336 @@
     "- Add column for clean, lemmatized, etc.\n",
     "- Split word list by language"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>repo</th>\n",
+       "      <th>language</th>\n",
+       "      <th>readme_contents</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>apple/llvm-project</td>\n",
+       "      <td>None</td>\n",
+       "      <td># Apple's fork of llvm-project\\n\\nThis is Appl...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>apple/swift-argument-parser</td>\n",
+       "      <td>Swift</td>\n",
+       "      <td># Swift Argument Parser\\n\\n## Usage\\n\\nBegin b...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>apple/swift-docc</td>\n",
+       "      <td>Swift</td>\n",
+       "      <td># Swift-DocC\\n\\nSwift-DocC is a documentation ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>apple/swift</td>\n",
+       "      <td>C++</td>\n",
+       "      <td>&lt;img src=\"https://swift.org/assets/images/swif...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>apple/sourcekit-lsp</td>\n",
+       "      <td>Swift</td>\n",
+       "      <td># SourceKit-LSP\\n\\nSourceKit-LSP is an impleme...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                          repo language  \\\n",
+       "0           apple/llvm-project     None   \n",
+       "1  apple/swift-argument-parser    Swift   \n",
+       "2             apple/swift-docc    Swift   \n",
+       "3                  apple/swift      C++   \n",
+       "4          apple/sourcekit-lsp    Swift   \n",
+       "\n",
+       "                                     readme_contents  \n",
+       "0  # Apple's fork of llvm-project\\n\\nThis is Appl...  \n",
+       "1  # Swift Argument Parser\\n\\n## Usage\\n\\nBegin b...  \n",
+       "2  # Swift-DocC\\n\\nSwift-DocC is a documentation ...  \n",
+       "3  <img src=\"https://swift.org/assets/images/swif...  \n",
+       "4  # SourceKit-LSP\\n\\nSourceKit-LSP is an impleme...  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>repo</th>\n",
+       "      <th>language</th>\n",
+       "      <th>original</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>apple/llvm-project</td>\n",
+       "      <td>None</td>\n",
+       "      <td># Apple's fork of llvm-project\\n\\nThis is Appl...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>apple/swift-argument-parser</td>\n",
+       "      <td>Swift</td>\n",
+       "      <td># Swift Argument Parser\\n\\n## Usage\\n\\nBegin b...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>apple/swift-docc</td>\n",
+       "      <td>Swift</td>\n",
+       "      <td># Swift-DocC\\n\\nSwift-DocC is a documentation ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>apple/swift</td>\n",
+       "      <td>C++</td>\n",
+       "      <td>&lt;img src=\"https://swift.org/assets/images/swif...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>apple/sourcekit-lsp</td>\n",
+       "      <td>Swift</td>\n",
+       "      <td># SourceKit-LSP\\n\\nSourceKit-LSP is an impleme...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                          repo language  \\\n",
+       "0           apple/llvm-project     None   \n",
+       "1  apple/swift-argument-parser    Swift   \n",
+       "2             apple/swift-docc    Swift   \n",
+       "3                  apple/swift      C++   \n",
+       "4          apple/sourcekit-lsp    Swift   \n",
+       "\n",
+       "                                            original  \n",
+       "0  # Apple's fork of llvm-project\\n\\nThis is Appl...  \n",
+       "1  # Swift Argument Parser\\n\\n## Usage\\n\\nBegin b...  \n",
+       "2  # Swift-DocC\\n\\nSwift-DocC is a documentation ...  \n",
+       "3  <img src=\"https://swift.org/assets/images/swif...  \n",
+       "4  # SourceKit-LSP\\n\\nSourceKit-LSP is an impleme...  "
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.rename(columns={'readme_contents': 'original'}, inplace=True)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import prepare_jag"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>language</th>\n",
+       "      <th>original</th>\n",
+       "      <th>clean</th>\n",
+       "      <th>stemmed</th>\n",
+       "      <th>lemmatized</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>None</td>\n",
+       "      <td># Apple's fork of llvm-project\\n\\nThis is Appl...</td>\n",
+       "      <td>apple ' fork llvmproject apple ' fork llvmproj...</td>\n",
+       "      <td>appl ' fork llvmproject thi appl ' fork llvmpr...</td>\n",
+       "      <td>apple ' fork llvmproject apple ' fork llvmproj...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Swift</td>\n",
+       "      <td># Swift Argument Parser\\n\\n## Usage\\n\\nBegin b...</td>\n",
+       "      <td>swift argument parser usage begin declaring ty...</td>\n",
+       "      <td>swift argument parser usag begin declar type d...</td>\n",
+       "      <td>swift argument parser usage begin declaring ty...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Swift</td>\n",
+       "      <td># Swift-DocC\\n\\nSwift-DocC is a documentation ...</td>\n",
+       "      <td>swiftdocc swiftdocc documentation compiler swi...</td>\n",
+       "      <td>swiftdocc swiftdocc document compil swift fram...</td>\n",
+       "      <td>swiftdocc swiftdocc documentation compiler swi...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>C++</td>\n",
+       "      <td>&lt;img src=\"https://swift.org/assets/images/swif...</td>\n",
+       "      <td>img srchttpsswiftorgassetsimagesswiftsvg altsw...</td>\n",
+       "      <td>img srchttpsswiftorgassetsimagesswiftsvg altsw...</td>\n",
+       "      <td>img srchttpsswiftorgassetsimagesswiftsvg altsw...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Swift</td>\n",
+       "      <td># SourceKit-LSP\\n\\nSourceKit-LSP is an impleme...</td>\n",
+       "      <td>sourcekitlsp sourcekitlsp implementation langu...</td>\n",
+       "      <td>sourcekitlsp sourcekitlsp implement languag se...</td>\n",
+       "      <td>sourcekitlsp sourcekitlsp implementation langu...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  language                                           original  \\\n",
+       "0     None  # Apple's fork of llvm-project\\n\\nThis is Appl...   \n",
+       "1    Swift  # Swift Argument Parser\\n\\n## Usage\\n\\nBegin b...   \n",
+       "2    Swift  # Swift-DocC\\n\\nSwift-DocC is a documentation ...   \n",
+       "3      C++  <img src=\"https://swift.org/assets/images/swif...   \n",
+       "4    Swift  # SourceKit-LSP\\n\\nSourceKit-LSP is an impleme...   \n",
+       "\n",
+       "                                               clean  \\\n",
+       "0  apple ' fork llvmproject apple ' fork llvmproj...   \n",
+       "1  swift argument parser usage begin declaring ty...   \n",
+       "2  swiftdocc swiftdocc documentation compiler swi...   \n",
+       "3  img srchttpsswiftorgassetsimagesswiftsvg altsw...   \n",
+       "4  sourcekitlsp sourcekitlsp implementation langu...   \n",
+       "\n",
+       "                                             stemmed  \\\n",
+       "0  appl ' fork llvmproject thi appl ' fork llvmpr...   \n",
+       "1  swift argument parser usag begin declar type d...   \n",
+       "2  swiftdocc swiftdocc document compil swift fram...   \n",
+       "3  img srchttpsswiftorgassetsimagesswiftsvg altsw...   \n",
+       "4  sourcekitlsp sourcekitlsp implement languag se...   \n",
+       "\n",
+       "                                          lemmatized  \n",
+       "0  apple ' fork llvmproject apple ' fork llvmproj...  \n",
+       "1  swift argument parser usage begin declaring ty...  \n",
+       "2  swiftdocc swiftdocc documentation compiler swi...  \n",
+       "3  img srchttpsswiftorgassetsimagesswiftsvg altsw...  \n",
+       "4  sourcekitlsp sourcekitlsp implementation langu...  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prepare_jag.prep_article_data(df, 'original', extra_words = [], exclude_words = []).head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
