Add requirements.txt and update README

--- a/jag_explore.ipynb
+++ b/jag_explore.ipynb
@@ -2569,10 +2569,93 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Establish Baseline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The most common language is swift, so our baseline model would predict that all the repositories are coded in swift"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Swift    0.46\n",
+       "Name: language, dtype: float64"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# baseline\n",
+    "df[df['language'] == 'Swift'].language.value_counts()/sum(df.language.value_counts())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Split data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Need to split words in to train / test / split\n",
+    "- For x - start with vectorzed,  lematized words \n",
+    "- y = target"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# To - Do"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- [ ] Go back and add corpus specific stopwords to the prepare.py file and re-run notebook\n",
+    "- [ ] Get clarification on train / *validate* / test\n",
+    "- [ ] Make a new environment and get lazypredict classifier installed and working and feed it something from this to see how it does\n",
+    "- [ ] Update trello board\n",
+    "- [x] Communicate proposed plan for tomorrow to team\n",
+    "- [ ] Ask instructors about file organization within repos and how to call / import / use files in different folders outide root"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
